--- a/index.html
+++ b/index.html
@@ -3,222 +3,160 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Personal Site — Layered Scene with Clickable Stickers</title>
+<title>Personal Site — Layered Scene</title>
 <style>
-  :root{
-    --overlay-opacity:.25;          /* adjust to taste */
-    --overlay-blend:soft-light;     /* overlay | multiply | screen */
+  :root {
+    --overlay-opacity: .25;
+    --overlay-blend: soft-light;
   }
 
-  /* Reset & base */
-  *{box-sizing:border-box}
-  html,body{height:100%}
-  body{
-    margin:0;
-    background:#000;                /* avoids flashes while images load */
-    font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";
-    overflow:hidden;                /* full-bleed 100vh canvas */
+  html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    background: #000;
+    font-family: system-ui, sans-serif;
   }
 
-  /* Screen-reader only utility */
-  .sr-only{
-    position:absolute!important;width:1px;height:1px;margin:-1px;padding:0;border:0;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;
+  .scene {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    isolation: isolate;
+    overflow: hidden;
   }
 
-  /* Scene root */
-  .scene{
-    position:relative;
-    width:100vw;height:100vh;min-height:100dvh;
-    overflow:hidden;
-    isolation:isolate;              /* keep mix-blend effects local */
+  /* Background and overlay layers */
+  .scene::before, .scene::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
   }
 
-  /* TRUE layers: bg + overlay as pseudo-elements */
-  .scene::before,
-  .scene::after{
-    content:"";
-    position:absolute; inset:0;
-    background-size:cover;
-    background-position:center;
-    background-repeat:no-repeat;
+  .scene::before { z-index: 0; }
+  .scene::after {
+    z-index: 2;
+    opacity: var(--overlay-opacity);
+    mix-blend-mode: var(--overlay-blend);
+    pointer-events: none;
   }
 
-  /* Z-order contract: bg (0) < stickers (1) < overlay (2) */
-  .scene::before{ z-index:0; }      /* BACKGROUND */
-  .scene::after{
-    z-index:2;                      /* OVERLAY (tints; doesn’t block clicks) */
-    mix-blend-mode:var(--overlay-blend);
-    opacity:var(--overlay-opacity);
-    pointer-events:none;
+  .pc::before { background-image: url("pc/bg.png"); }
+  .pc::after { background-image: url("pc/overlay.png"); }
+
+  .mobile::before { background-image: url("mobile/bg.png"); }
+  .mobile::after { background-image: url("mobile/overlay.png"); }
+
+  /* Stickers */
+  .slot {
+    position: absolute;
+    z-index: 1;
+    width: var(--w);
+    top: var(--t);
+    left: var(--l);
   }
 
-  /* Bind images — use ABSOLUTE-ROOT paths to be robust on custom domains */
-  .pc::before{ background-image:url('/pc/bg.png'); }
-  .pc::after { background-image:url('/pc/overlay.png'); }
-
-  .mobile::before{ background-image:url('/mobile/bg.png'); }
-  .mobile::after { background-image:url('/mobile/overlay.png'); } /* ok if file absent */
-
-  /* Responsive switch */
-  .pc{display:block}
-  .mobile{display:none}
-  @media (max-width:800px){
-    .pc{display:none}
-    .mobile{display:block}
+  .sticker {
+    display: block;
+    width: 100%;
   }
 
-  /* Sticker slots */
-  .slot{
-    position:absolute;
-    z-index:1;                       /* between bg (0) and overlay (2) */
-    width:var(--w);
-    left:var(--l);
-    top:var(--t);
+  .sticker img {
+    width: 100%;
+    height: auto;
+    display: block;
+    filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.3));
   }
-  .sticker{display:block;width:100%;text-decoration:none;outline:none;}
-  .sticker img{display:block;width:100%;height:auto;filter:drop-shadow(0 10px 18px rgba(0,0,0,.25));}
 
-  /* KTM small rounded buttons */
-  .btn{
-    position:absolute;
-    display:inline-block;
-    font-size:12px;line-height:1;
-    padding:.45rem .6rem;border-radius:999px;
-    background:#111;color:#fff;text-decoration:none;
-    box-shadow:0 2px 6px rgba(0,0,0,.25);
-    user-select:none;
-    transition:transform .08s ease, opacity .2s ease;
+  .btn {
+    position: absolute;
+    bottom: .4rem;
+    font-size: 12px;
+    padding: .4rem .6rem;
+    border-radius: 1rem;
+    background: #111;
+    color: white;
+    text-decoration: none;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.25);
   }
-  .btn:hover{transform:translateY(-1px)}
-  .btn:active{transform:translateY(0)}
-  .btn:focus{outline:2px solid #fff;outline-offset:2px}
-  .slot-3 .btn.dl { right:.4rem;  bottom:.4rem; }
-  .slot-3 .btn.buy{ right:4.9rem; bottom:.4rem; }
 
-  /* ---------- Desktop positions (percent-of-viewport) ---------- */
-  .pc .slot-1{ --w:42%;   --t:5.5%;  --l:7%;    }
-  .pc .slot-2{ --w:31%;   --t:7.5%;  --l:36.5%; }
-  .pc .slot-3{ --w:24%;   --t:7.5%;  --l:71.5%; }
-  .pc .slot-4{ --w:14%;   --t:35%;   --l:20.5%; }
-  .pc .slot-5{ --w:15%;   --t:34.5%; --l:70%;   }
+  .btn.buy { right: 4.9rem; }
+  .btn.dl { right: .4rem; }
 
-  /* ---------- Mobile defaults (tweak later) ---------- */
-  .mobile .slot-1{ --w:70%;  --t:6%;   --l:6%;  }
-  .mobile .slot-2{ --w:58%;  --t:14%;  --l:20%; }
-  .mobile .slot-3{ --w:50%;  --t:8%;   --l:46%; }
-  .mobile .slot-4{ --w:28%;  --t:54%;  --l:8%;  }
-  .mobile .slot-5{ --w:30%;  --t:55%;  --l:62%; }
+  /* Desktop Positions */
+  .pc .slot-1 { --w: 42%; --t: 5.5%; --l: 7%; }
+  .pc .slot-2 { --w: 31%; --t: 7.5%; --l: 36.5%; }
+  .pc .slot-3 { --w: 24%; --t: 7.5%; --l: 71.5%; }
+  .pc .slot-4 { --w: 14%; --t: 35%; --l: 20.5%; }
+  .pc .slot-5 { --w: 15%; --t: 34.5%; --l: 70%; }
 
-  /* Debug (press “d”) */
-  body.debug .slot{outline:2px dashed rgba(255,255,255,.8)}
-  body.debug .slot::after{
-    content:attr(data-slot);
-    position:absolute;top:-.9rem;left:-.9rem;
-    background:#ff2;color:#111;border-radius:6px;padding:.25rem .35rem;
-    font:600 12px/1.2 ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;
-    box-shadow:0 2px 6px rgba(0,0,0,.3);
+  /* Mobile Positions */
+  @media (max-width: 800px) {
+    .pc { display: none; }
+    .mobile { display: block; }
   }
+
+  @media (min-width: 801px) {
+    .mobile { display: none; }
+  }
+
+  .mobile .slot-1 { --w: 70%; --t: 6%; --l: 6%; }
+  .mobile .slot-2 { --w: 58%; --t: 14%; --l: 20%; }
+  .mobile .slot-3 { --w: 50%; --t: 8%; --l: 46%; }
+  .mobile .slot-4 { --w: 28%; --t: 54%; --l: 8%; }
+  .mobile .slot-5 { --w: 30%; --t: 55%; --l: 62%; }
 </style>
 </head>
 <body>
 
-<!-- ===================== DESKTOP ===================== -->
-<section class="scene pc" aria-label="Desktop scene with layered background and interactive stickers">
-  <!-- #1 -->
-  <div class="slot slot-1" data-slot="#1">
-    <a class="sticker" href="#" aria-label="Open FiradPatra">
-      <span class="sr-only">FiradPatra</span>
-      <img src="/pc/fp.png" alt="FiradPatra sticker">
-    </a>
+<!-- Desktop -->
+<section class="scene pc">
+  <div class="slot slot-1"><a class="sticker" href="#"><img src="pc/fp.png" alt="fp"></a></div>
+  <div class="slot slot-2"><a class="sticker" href="#"><img src="pc/post.png" alt="post"></a></div>
+  <div class="slot slot-3">
+    <a class="sticker" href="#"><img src="pc/ktm.png" alt="ktm"></a>
+    <a class="btn buy" href="#" target="_blank">Buy</a>
+    <a class="btn dl" href="ktm.pdf" download>Download</a>
   </div>
-
-  <!-- #2 -->
-  <div class="slot slot-2" data-slot="#2">
-    <a class="sticker" href="#" aria-label="Open blog post">
-      <span class="sr-only">Blog Post</span>
-      <img src="/pc/post.png" alt="Poster sticker">
-    </a>
-  </div>
-
-  <!-- #3 + buttons -->
-  <div class="slot slot-3" data-slot="#3" aria-live="polite">
-    <a class="sticker" href="#" aria-label="Open Kathmandu poster">
-      <span class="sr-only">Kathmandu Poster</span>
-      <img src="/pc/ktm.png" alt="Kathmandu poster sticker">
-    </a>
-    <a class="btn buy" href="#" target="_blank" rel="noopener" aria-label="Buy Kathmandu poster">Buy</a>
-    <a class="btn dl"  href="/ktm.pdf" download aria-label="Download Kathmandu poster PDF">Download</a>
-  </div>
-
-  <!-- #4 -->
-  <div class="slot slot-4" data-slot="#4">
-    <a class="sticker" href="#" aria-label="Open YouTube">
-      <span class="sr-only">YouTube</span>
-      <img src="/pc/yt.png" alt="YouTube sticker">
-    </a>
-  </div>
-
-  <!-- #5 -->
-  <div class="slot slot-5" data-slot="#5">
-    <a class="sticker" href="#" aria-label="Open px1rt">
-      <span class="sr-only">px1rt</span>
-      <img src="/pc/px1rt.png" alt="px1rt sticker">
-    </a>
-  </div>
+  <div class="slot slot-4"><a class="sticker" href="#"><img src="pc/yt.png" alt="yt"></a></div>
+  <div class="slot slot-5"><a class="sticker" href="#"><img src="pc/px1rt.png" alt="px1rt"></a></div>
 </section>
 
-<!-- ===================== MOBILE ===================== -->
-<section class="scene mobile" aria-label="Mobile scene with layered background and interactive stickers">
-  <!-- #1 -->
-  <div class="slot slot-1" data-slot="#1">
-    <a class="sticker" href="#" aria-label="Open FiradPatra">
-      <span class="sr-only">FiradPatra</span>
-      <img src="/mobile/fp.png" alt="FiradPatra sticker">
-    </a>
+<!-- Mobile -->
+<section class="scene mobile">
+  <div class="slot slot-1"><a class="sticker" href="#"><img src="mobile/fp.png" alt="fp"></a></div>
+  <div class="slot slot-2"><a class="sticker" href="#"><img src="mobile/post.png" alt="post"></a></div>
+  <div class="slot slot-3">
+    <a class="sticker" href="#"><img src="mobile/ktm.png" alt="ktm"></a>
+    <a class="btn buy" href="#" target="_blank">Buy</a>
+    <a class="btn dl" href="ktm.pdf" download>Download</a>
   </div>
-
-  <!-- #2 -->
-  <div class="slot slot-2" data-slot="#2">
-    <a class="sticker" href="#" aria-label="Open blog post">
-      <span class="sr-only">Blog Post</span>
-      <img src="/mobile/post.png" alt="Poster sticker">
-    </a>
-  </div>
-
-  <!-- #3 + buttons -->
-  <div class="slot slot-3" data-slot="#3">
-    <a class="sticker" href="#" aria-label="Open Kathmandu poster">
-      <span class="sr-only">Kathmandu Poster</span>
-      <img src="/mobile/ktm.png" alt="Kathmandu poster sticker">
-    </a>
-    <a class="btn buy" href="#" target="_blank" rel="noopener" aria-label="Buy Kathmandu poster">Buy</a>
-    <a class="btn dl"  href="/ktm.pdf" download aria-label="Download Kathmandu poster PDF">Download</a>
-  </div>
-
-  <!-- #4 -->
-  <div class="slot slot-4" data-slot="#4">
-    <a class="sticker" href="#" aria-label="Open YouTube">
-      <span class="sr-only">YouTube</span>
-      <img src="/mobile/yt.png" alt="YouTube sticker">
-    </a>
-  </div>
-
-  <!-- #5 -->
-  <div class="slot slot-5" data-slot="#5">
-    <a class="sticker" href="#" aria-label="Open px1rt">
-      <span class="sr-only">px1rt</span>
-      <img src="/mobile/px1rt.png" alt="px1rt sticker">
-    </a>
-  </div>
+  <div class="slot slot-4"><a class="sticker" href="#"><img src="mobile/yt.png" alt="yt"></a></div>
+  <div class="slot slot-5"><a class="sticker" href="#"><img src="mobile/px1rt.png" alt="px1rt"></a></div>
 </section>
 
 <script>
-  // Debug toggle: press "d" to outline slots & show numbers
-  (function(){
-    addEventListener('keydown', e=>{
-      if(e.key.toLowerCase()==='d'){ document.body.classList.toggle('debug'); }
-    }, {passive:true});
-  }());
+/* ------------------------------------------------
+   Auto-detect base path to fix bg/overlay issues
+------------------------------------------------ */
+(function() {
+  const base = window.location.pathname.replace(/\/index\.html$/, '').replace(/\/$/, '');
+  document.querySelectorAll('.scene.pc, .scene.mobile').forEach(scene => {
+    const type = scene.classList.contains('pc') ? 'pc' : 'mobile';
+    const bg = `${base}/${type}/bg.png`;
+    const overlay = `${base}/${type}/overlay.png`;
+
+    scene.style.setProperty('--bg', `url('${bg}')`);
+    scene.style.setProperty('--overlay', `url('${overlay}')`);
+    scene.style.background = `url('${bg}') center/cover no-repeat`;
+    scene.dataset.bgSet = 'true';
+  });
+})();
 </script>
 </body>
 </html>
