--- a/index.html
+++ b/index.html
@@ -3,160 +3,163 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Personal Site — Layered Scene</title>
+<title>Personal Site — Layered Scene with Overlay</title>
 <style>
-  :root {
-    --overlay-opacity: .25;
-    --overlay-blend: soft-light;
+  :root{
+    --overlay-opacity:.15;          /* matches Krita's 15% overlay layer */
+    --overlay-blend:overlay;        /* Krita-like blend mode */
   }
 
-  html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    background: #000;
-    font-family: system-ui, sans-serif;
+  html,body{
+    margin:0;
+    height:100%;
+    width:100%;
+    overflow:hidden;
+    background:#000;
+    font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
   }
 
-  .scene {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    isolation: isolate;
-    overflow: hidden;
+  .scene{
+    position:relative;
+    width:100vw;
+    height:100vh;
+    isolation:isolate;
+    overflow:hidden;
   }
 
-  /* Background and overlay layers */
-  .scene::before, .scene::after {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  .scene::before,
+  .scene::after{
+    content:"";
+    position:absolute;
+    inset:0;
+    background-size:cover;
+    background-position:center;
+    background-repeat:no-repeat;
   }
 
-  .scene::before { z-index: 0; }
-  .scene::after {
-    z-index: 2;
-    opacity: var(--overlay-opacity);
-    mix-blend-mode: var(--overlay-blend);
-    pointer-events: none;
+  .scene::before{ z-index:0; } /* background */
+  .scene::after{
+    z-index:2; /* overlay */
+    opacity:var(--overlay-opacity);
+    mix-blend-mode:var(--overlay-blend);
+    pointer-events:none;
   }
 
-  .pc::before { background-image: url("pc/bg.png"); }
-  .pc::after { background-image: url("pc/overlay.png"); }
+  /* Assign desktop and mobile backgrounds and overlays */
+  .pc::before{ background-image:url('/pc/bg.png'); }
+  .pc::after { background-image:url('/pc/overlay.png'); }
 
-  .mobile::before { background-image: url("mobile/bg.png"); }
-  .mobile::after { background-image: url("mobile/overlay.png"); }
+  .mobile::before{ background-image:url('/mobile/bg.png'); }
+  .mobile::after { background-image:url('/mobile/overlay.png'); }
+
+  /* responsive switch */
+  .pc{display:block;}
+  .mobile{display:none;}
+  @media(max-width:800px){
+    .pc{display:none;}
+    .mobile{display:block;}
+  }
 
   /* Stickers */
-  .slot {
-    position: absolute;
-    z-index: 1;
-    width: var(--w);
-    top: var(--t);
-    left: var(--l);
+  .slot{
+    position:absolute;
+    z-index:1;
+    width:var(--w);
+    top:var(--t);
+    left:var(--l);
   }
 
-  .sticker {
-    display: block;
-    width: 100%;
+  .sticker{display:block;width:100%;text-decoration:none;}
+  .sticker img{width:100%;height:auto;display:block;filter:drop-shadow(0 4px 8px rgba(0,0,0,0.3));}
+
+  /* Buttons for KTM */
+  .btn{
+    position:absolute;
+    bottom:.4rem;
+    font-size:12px;
+    padding:.4rem .6rem;
+    border-radius:999px;
+    background:#111;
+    color:#fff;
+    text-decoration:none;
+    box-shadow:0 2px 6px rgba(0,0,0,0.25);
   }
+  .btn.buy{ right:4.9rem; }
+  .btn.dl{ right:.4rem; }
 
-  .sticker img {
-    width: 100%;
-    height: auto;
-    display: block;
-    filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.3));
+  /* Perfect ad alignment (based on Krita greenscreen) */
+  .pc .slot-1{ --w:15%; --t:8%;  --l:12%; }  /* FiradPatra */
+  .pc .slot-2{ --w:25%; --t:7%;  --l:37%; }  /* Welcome poster */
+  .pc .slot-3{ --w:17%; --t:7%;  --l:70%; }  /* Kathmandu poster */
+  .pc .slot-4{ --w:15%; --t:36%; --l:22%; }  /* YouTube poster */
+  .pc .slot-5{ --w:15%; --t:36%; --l:69%; }  /* Px1rt poster */
+
+  /* Mobile defaults (to tweak later) */
+  .mobile .slot-1{ --w:70%;  --t:6%;  --l:6%; }
+  .mobile .slot-2{ --w:58%;  --t:14%; --l:20%; }
+  .mobile .slot-3{ --w:50%;  --t:8%;  --l:46%; }
+  .mobile .slot-4{ --w:28%;  --t:54%; --l:8%; }
+  .mobile .slot-5{ --w:30%;  --t:55%; --l:62%; }
+
+  /* Debug outlines */
+  body.debug .slot{outline:2px dashed rgba(255,255,255,.8);}
+  body.debug .slot::after{
+    content:attr(data-slot);
+    position:absolute;top:-.9rem;left:-.9rem;
+    background:#ff2;color:#111;border-radius:6px;padding:.25rem .35rem;
+    font:600 12px/1.2 monospace;
   }
-
-  .btn {
-    position: absolute;
-    bottom: .4rem;
-    font-size: 12px;
-    padding: .4rem .6rem;
-    border-radius: 1rem;
-    background: #111;
-    color: white;
-    text-decoration: none;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.25);
-  }
-
-  .btn.buy { right: 4.9rem; }
-  .btn.dl { right: .4rem; }
-
-  /* Desktop Positions */
-  .pc .slot-1 { --w: 42%; --t: 5.5%; --l: 7%; }
-  .pc .slot-2 { --w: 31%; --t: 7.5%; --l: 36.5%; }
-  .pc .slot-3 { --w: 24%; --t: 7.5%; --l: 71.5%; }
-  .pc .slot-4 { --w: 14%; --t: 35%; --l: 20.5%; }
-  .pc .slot-5 { --w: 15%; --t: 34.5%; --l: 70%; }
-
-  /* Mobile Positions */
-  @media (max-width: 800px) {
-    .pc { display: none; }
-    .mobile { display: block; }
-  }
-
-  @media (min-width: 801px) {
-    .mobile { display: none; }
-  }
-
-  .mobile .slot-1 { --w: 70%; --t: 6%; --l: 6%; }
-  .mobile .slot-2 { --w: 58%; --t: 14%; --l: 20%; }
-  .mobile .slot-3 { --w: 50%; --t: 8%; --l: 46%; }
-  .mobile .slot-4 { --w: 28%; --t: 54%; --l: 8%; }
-  .mobile .slot-5 { --w: 30%; --t: 55%; --l: 62%; }
 </style>
 </head>
 <body>
 
-<!-- Desktop -->
+<!-- Desktop Scene -->
 <section class="scene pc">
-  <div class="slot slot-1"><a class="sticker" href="#"><img src="pc/fp.png" alt="fp"></a></div>
-  <div class="slot slot-2"><a class="sticker" href="#"><img src="pc/post.png" alt="post"></a></div>
-  <div class="slot slot-3">
-    <a class="sticker" href="#"><img src="pc/ktm.png" alt="ktm"></a>
-    <a class="btn buy" href="#" target="_blank">Buy</a>
-    <a class="btn dl" href="ktm.pdf" download>Download</a>
+  <div class="slot slot-1" data-slot="#1">
+    <a class="sticker" href="#"><img src="/pc/fp.png" alt="FiradPatra"></a>
   </div>
-  <div class="slot slot-4"><a class="sticker" href="#"><img src="pc/yt.png" alt="yt"></a></div>
-  <div class="slot slot-5"><a class="sticker" href="#"><img src="pc/px1rt.png" alt="px1rt"></a></div>
+  <div class="slot slot-2" data-slot="#2">
+    <a class="sticker" href="#"><img src="/pc/post.png" alt="Welcome Poster"></a>
+  </div>
+  <div class="slot slot-3" data-slot="#3">
+    <a class="sticker" href="#"><img src="/pc/ktm.png" alt="Kathmandu Poster"></a>
+    <a class="btn buy" href="#" target="_blank">Buy</a>
+    <a class="btn dl" href="/ktm.pdf" download>Download</a>
+  </div>
+  <div class="slot slot-4" data-slot="#4">
+    <a class="sticker" href="#"><img src="/pc/yt.png" alt="YouTube Poster"></a>
+  </div>
+  <div class="slot slot-5" data-slot="#5">
+    <a class="sticker" href="#"><img src="/pc/px1rt.png" alt="Px1rt Poster"></a>
+  </div>
 </section>
 
-<!-- Mobile -->
+<!-- Mobile Scene -->
 <section class="scene mobile">
-  <div class="slot slot-1"><a class="sticker" href="#"><img src="mobile/fp.png" alt="fp"></a></div>
-  <div class="slot slot-2"><a class="sticker" href="#"><img src="mobile/post.png" alt="post"></a></div>
-  <div class="slot slot-3">
-    <a class="sticker" href="#"><img src="mobile/ktm.png" alt="ktm"></a>
-    <a class="btn buy" href="#" target="_blank">Buy</a>
-    <a class="btn dl" href="ktm.pdf" download>Download</a>
+  <div class="slot slot-1" data-slot="#1">
+    <a class="sticker" href="#"><img src="/mobile/fp.png" alt="FiradPatra"></a>
   </div>
-  <div class="slot slot-4"><a class="sticker" href="#"><img src="mobile/yt.png" alt="yt"></a></div>
-  <div class="slot slot-5"><a class="sticker" href="#"><img src="mobile/px1rt.png" alt="px1rt"></a></div>
+  <div class="slot slot-2" data-slot="#2">
+    <a class="sticker" href="#"><img src="/mobile/post.png" alt="Welcome Poster"></a>
+  </div>
+  <div class="slot slot-3" data-slot="#3">
+    <a class="sticker" href="#"><img src="/mobile/ktm.png" alt="Kathmandu Poster"></a>
+    <a class="btn buy" href="#" target="_blank">Buy</a>
+    <a class="btn dl" href="/ktm.pdf" download>Download</a>
+  </div>
+  <div class="slot slot-4" data-slot="#4">
+    <a class="sticker" href="#"><img src="/mobile/yt.png" alt="YouTube Poster"></a>
+  </div>
+  <div class="slot slot-5" data-slot="#5">
+    <a class="sticker" href="#"><img src="/mobile/px1rt.png" alt="Px1rt Poster"></a>
+  </div>
 </section>
 
 <script>
-/* ------------------------------------------------
-   Auto-detect base path to fix bg/overlay issues
------------------------------------------------- */
-(function() {
-  const base = window.location.pathname.replace(/\/index\.html$/, '').replace(/\/$/, '');
-  document.querySelectorAll('.scene.pc, .scene.mobile').forEach(scene => {
-    const type = scene.classList.contains('pc') ? 'pc' : 'mobile';
-    const bg = `${base}/${type}/bg.png`;
-    const overlay = `${base}/${type}/overlay.png`;
-
-    scene.style.setProperty('--bg', `url('${bg}')`);
-    scene.style.setProperty('--overlay', `url('${overlay}')`);
-    scene.style.background = `url('${bg}') center/cover no-repeat`;
-    scene.dataset.bgSet = 'true';
-  });
-})();
+  // Debug toggle: press "d" to show outlines and slot numbers
+  addEventListener('keydown', e=>{
+    if(e.key.toLowerCase()==='d'){ document.body.classList.toggle('debug'); }
+  }, {passive:true});
 </script>
 </body>
 </html>
