--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Personal Site — Layered Scene with Overlay</title>
 <style>
   :root{
-    --overlay-opacity:.50;          /* matches Krita's 15% overlay layer */
+    --overlay-opacity:1.0;          /* matches Krita's 15% overlay layer */
     --overlay-blend:overlay;        /* Krita-like blend mode */
   }
 
